--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 #server
-flask
-gunicorn
+Flask==3.1.0
+gunicorn==23.0.0
 
 #local env
-python-dotenv
+python-dotenv==1.0.1
 
-groq
-langchain
-langchain-groq
-langchain-community
-langgraph
+groq==0.15.0
+langchain==0.3.15
+langchain-groq==0.2.3
+langchain-community==0.3.15
+langgraph==0.2.67
